# HRRag

./: .gitignore  .mcp.json  Makefile  README.md
backend/: .env.example  README.md  docker-compose.yml  main.py  mcp_server.py  pyproject.toml
backend/app/auth/: models.py  router.py  schemas.py  service.py
backend/app/chat/: models.py  prompts.py  router.py  schemas.py  service.py
backend/app/core/: config.py  database.py  embeddings.py  retrieval.py  security.py
backend/app/documents/: models.py  router.py  schemas.py  service.py
backend/app/documents/processors/: docx.py  pdf.py  text.py
backend/app/mcp/: auth.py  schemas.py  server.py
backend/app/mcp/tools/: compare.py  documents.py  get_chunk.py  get_context.py  references.py  search.py
frontend/: Dockerfile  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/chat/: ChatInput.tsx  ChatMessage.tsx  ChatWindow.tsx
frontend/src/components/documents/: DocumentList.tsx  DocumentUpload.tsx
frontend/src/components/layout/: AppLayout.tsx  LanguageSwitcher.tsx  McpTokenPanel.tsx  Sidebar.tsx  ThemeToggle.tsx
frontend/src/hooks/: useChat.ts  useDocuments.ts
frontend/src/i18n/: config.ts
frontend/src/lib/: api.ts
frontend/src/locales/en/: auth.json  chat.json  common.json  documents.json  topics.json
frontend/src/locales/es/: auth.json  chat.json  common.json  documents.json  topics.json
frontend/src/pages/: ChatPage.tsx  LoginPage.tsx
frontend/src/store/: authStore.ts  chatStore.ts  themeStore.ts
